--- a/the_back-end/README
+++ b/the_back-end/README
@@ -1,1 +1,42 @@
-The the_back-end
+%The the_back-end
+
+The Back-end_code.py is the back-end of our system.
+If you want to use it, you need the following configuration：
+cleverhans             3.0.1
+Flask                  1.1.2
+Flask-Cors             3.0.10
+h5py                   2.10.0
+imageio                2.9.0
+Keras                  2.3.1
+Keras-Applications     1.0.8
+Keras-Preprocessing    1.1.2
+matplotlib             3.3.4
+mkl-fft                1.3.0
+mkl-random             1.1.1
+mkl-service            2.3.0
+mmdnn                  0.3.1
+mnist                  0.2.2
+numpy                  1.19.2
+opencv-python          4.5.1.48
+pandas                 1.1.5
+Pillow                 8.2.0
+pip                    21.0.1
+PyMySQL                1.0.2
+pyOpenSSL              20.0.1
+pyparsing              2.4.7
+PySocks                1.7.1
+python-dateutil        2.8.1
+pytz                   2021.1
+PyWavelets             1.1.1
+PyYAML                 5.4.1
+requests               2.25.1
+requests-oauthlib      1.3.0
+rsa                    4.7.2
+scikit-image           0.17.2
+scikit-learn           0.24.2
+scipy                  1.5.2
+seaborn                0.11.1
+setuptools             52.0.0.post20210125
+six                    1.15.0
+tensorboard            2.4.0
+tensorboard-plugin-wit 1.6.0
